--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -12,11 +13,13 @@
    <children>
       <Pane prefHeight="506.0" prefWidth="475.0">
          <children>
-            <Label fx:id="text" layoutX="100.0" layoutY="100.0" text="Labas" textFill="#ee0707">
+            <TextField fx:id="spejimas" layoutX="50.0" layoutY="100.0" />
+            <Button layoutX="50.0" layoutY="150.0" mnemonicParsing="false" onAction="#speti" text="Speju" />
+            <Button layoutX="200.0" layoutY="150.0" mnemonicParsing="false" onAction="#baigti" text="Baigti" />
+            <Label fx:id="skaicius" layoutX="50.0" layoutY="200.0" minHeight="100.0" minWidth="300" textFill="#eb0505">
                <font>
-                  <Font name="Arial Italic" size="32.0" />
+                  <Font size="30.0" />
                </font></Label>
-            <Button layoutX="100.0" layoutY="300.0" mnemonicParsing="false" onAction="#sayHi" onZoomFinished="#sayHi" text="Say hi" />
          </children>
       </Pane>
    </children>
